--- a/Ask/templates/registration/login.html
+++ b/Ask/templates/registration/login.html
@@ -5,7 +5,7 @@
 
 {% block layout %}
 
-    <h1>QuestionTime</h1>
+    <h1>ASK!</h1>
     <p class="text-muted">Condividi la tua Conoscenza!</p>
     <div class="login-form-container">
         <form method="POST">
