--- a/Ask/templates/django_registration/registration_form.html
+++ b/Ask/templates/django_registration/registration_form.html
@@ -4,7 +4,7 @@
 {% block title %}{{ block.super }} - Registrati{% endblock title %}
 
 {% block layout %}
-    <h3 class="mb-3">Crea un Account su QuestionTime</h3>
+    <h3 class="mb-3">Crea un Account su ASK!</h3>
     <div class="registration-form-container pb-0">
         <form method="POST">
             {% csrf_token %}
